--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "6.8.0",
+    "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-prettier": "^3.1.4",
