--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.31.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.4",
+    "@types/yup": "^0.29.10",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-import-resolver-typescript": "^2.3.0",
